<resources>
    <string name="app_name">GymPlanApp</string>
    <string name="add_plan">Dodaj plan treningowy</string>
    <string name="add_exercise">Dodaj ćwiczenie</string>
    <string name="info_get_plan_name">Podaj nazwe planu treningowego</string>
    <string name="info_get_date_plan">Wybierz date rozpoczecia planu</string>
    <string name="button_save">Zapisz</string>
    <string name="edit_plan">Edytuj plan treningowy</string>
    <string name="button_delete">Usuń plan</string>
    <string name="add_exercise_name">Wprowadź nazwę ćwiczenia</string>
    <string name="add_series">Wprowadź liczbę powtórzeń</string>
    <string name="add_series_label">Serie</string>
    <string name="add_weight">Ciężar</string>
    <string name="name_exercise">Nazwa ćwiczenia</string>
    <string name="category_exercise">Wybierz kategorie ćwiczenia</string>
    <string name="button_delete_ex">Usuń</string>
    <string name="edit_exercise">Edytuj ćwiczenie</string>
    <string name="weight">Obciążenie:</string>
    <string name="series">Serie:</string>
    <string name="amout">Powtórzenia:</string>
    <string name="add_repeat_label">Powtórzenia</string>
    <string name="done">Ukończone:</string>
    <string name="nazwa_planu_treningowego">Nazwa planu treningowego</string>
    <string name="progress_label">Największe obciążenie w kilogramach</string>

    <!--   Spinner category (    CHEST, SHOULDERS, ARMS, LEGS, BACK, ABS, OTHERS   ) -->
    <string-array name="category_exercise">
        <item>KLATKA</item>
        <item>RAMIONA</item>
        <item>RECE</item>
        <item>NOGI</item>
        <item>PLECY</item>
        <item>BRZUCH</item>
        <item>INNE</item>
    </string-array>
</resources>