<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.training_plan_fragment.add_training_plan_fragment.AddTrainingPlanFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/add_exercise" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <!-- CHEST, SHOULDERS, ARMS, LEGS, BACK, ABS, OTHERS -->

        <GridLayout
            android:id="@+id/categoryExerciseRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="2"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/chestRB"
                android:text="KLATKA"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/armsRB"
                android:text="RĘCE"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/absRB"
                android:text="BRZUCH"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/legsRB"
                android:text="NOGI"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="1"/>
            <RadioButton
                android:id="@+id/backRB"
                android:text="PLECY"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/shouldersRB"
                android:text="BARKI"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="1"/>
            <RadioButton
                android:id="@+id/othersRB"
                android:text="POZOSTAŁE"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="1"/>

        </GridLayout>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/name_exercise"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enter_exercise_name"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_exercise_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_series_label"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/enter_amount_series"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_series"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_weight"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/enter_weight"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/add_series"/>


    <Button
        android:id="@+id/saveExerciseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/button_save"
        android:layout_marginTop="30dp"/>

</LinearLayout>